<resources>
    <string name="app_name">FamilySafe</string>
    <string name="open_when_you_are_on_potentially_on_dangerous_journey">Open when you are on potentially on dangerous Journey.</string>
    <string name="guard">GUARD</string>
    <string name="shield_img">image</string>
    <string name="sos_img">image</string>
    <string name="in_case_of_emergency_keep_telling_family_members_to_contact_me">In case of emergency,keep telling family members to contact me.</string>
    <string name="sos">SOS</string>
    <string name="security">Security</string>
    <string name="my_family">My Family</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="guard_">Guard</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>