<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180dp"
        android:id="@+id/pink_cardView"
        app:cardCornerRadius="@dimen/_16dp"
        android:elevation="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/security_text"
        app:cardBackgroundColor="@color/pinkCardColor"
        android:layout_margin="16dp">



    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="@dimen/_16dp"
        android:id="@+id/security_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>
    <ImageView
        android:layout_width="@dimen/_96dp"
        android:id="@+id/sos_img"
        android:layout_height="@dimen/_96dp"
        android:src="@drawable/sos"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintTop_toTopOf="@id/pink_cardView"
        app:layout_constraintEnd_toEndOf="@id/pink_cardView"
        app:layout_constraintBottom_toBottomOf="@id/pink_cardView"
        android:contentDescription="@string/sos_img">

    </ImageView>
    <ImageView
        android:elevation="@dimen/_8dp"
        android:layout_width="@dimen/_96dp"
        android:id="@+id/shield_img"
        android:layout_height="@dimen/_96dp"
        android:src="@drawable/shield"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintTop_toTopOf="@id/green_cardView"
        app:layout_constraintEnd_toEndOf="@id/green_cardView"
        app:layout_constraintBottom_toBottomOf="@id/green_cardView"
        android:contentDescription="@string/shield_img">

    </ImageView>

    <TextView
        android:id="@+id/sos_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:elevation="@dimen/_8dp"
        android:text="@string/sos"
        android:textColor="@color/pinkCardText"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_cardView"
        app:layout_constraintTop_toTopOf="@id/pink_cardView">

    </TextView>

    <TextView
        android:id="@+id/guard_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="@color/cyan"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_cardView"
        app:layout_constraintTop_toTopOf="@id/green_cardView">

    </TextView>

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="@color/pinkCardText"
        android:elevation="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="@id/pink_cardView"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pink_cardView"
        app:layout_constraintTop_toBottomOf="@id/sos_textview">

    </TextView>

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:elevation="@dimen/_16dp"
        android:text="@string/open_when_you_are_on_potentially_on_dangerous_journey"
        android:textColor="@color/cyan1"
        app:layout_constraintEnd_toEndOf="@id/pink_cardView"
        app:layout_constraintEnd_toStartOf="@id/shield_img"
        app:layout_constraintStart_toStartOf="@id/pink_cardView"
        app:layout_constraintTop_toBottomOf="@id/guard_textview">

    </TextView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180dp"
        android:layout_margin="@dimen/_16dp"
        android:elevation="@dimen/_8dp"
        app:cardBackgroundColor="@color/greenCardColor"
        app:cardCornerRadius="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_cardView">

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>